--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
   ],
   "require": {
     "php": ">=5.6",
-    "psr/log": "*",
-    "psr/http-message": "*",
+    "psr/log": "1.*",
+    "psr/http-message": "1.*",
     "monolog/monolog": "1.*",
     "ext-simplexml": "*",
     "ext-xmlreader": "*"
