--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
   ],
   "require": {
     "php": ">=5.6",
+    "digiom/wotices": "dev-main",
     "psr/log": "1.*",
     "psr/http-message": "1.*",
     "monolog/monolog": "1.*",
