--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
   "require": {
     "php": ">=5.6",
     "wc1c/cml": "dev-main",
+    "wc1c/wc": "dev-main",
     "digiom/wotices": "dev-main",
     "psr/log": "1.*",
     "psr/http-message": "1.*",
