--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "wc1c/wc": "dev-main",
     "digiom/wotices": "dev-main",
     "digiom/psr7wp": "dev-main",
+    "digiom/woap": "dev-main",
     "psr/log": "1.*",
     "psr/http-message": "1.*",
     "monolog/monolog": "1.*",
